<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tochy Computer Services</string>
    <string name="welcome"></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="contentDesc">imageConetent</string>
    <string name="confirm_exit">Press Back button again to exit</string>
    
    <!-- Left Menu Items -->
	
    <string name="portfolio">Portfolio</string>
    <string name="about_us">About</string>
    <string name="our_team">Our team</string>
    <string name="clients">Clients</string>
    <string name="contact">Contact</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linked_in">LinkedIn</string>
    <string name="pinterest">Pinterest</string>
    <string name="youtube">YouTube</string>
    <string name="flickr">Flickr</string>
    
    <!-- Portfolio -->
    <string name="wallpaper_set">Wallpaper set</string>
    <string name="wallpaper_error">Wallpaper error</string>
    <string name="image_saved">Image saved</string>
    <string name="error_occured">No internet connection</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="share">"Share:"</string>
    <string name="no">"No"</string>
    <string name="yes">"Yes"</string>
    <string name="dialog_wallpaper">"Do you want to set wallpaper?"</string>
    <string name="dialog_save">"Do you want to save this image?"</string>
    <string name="dialog_share">"Do you want to share this image?"</string>
    
    <!-- About Us -->
    <string name="company_name">Tochy Computer Services</string>
    <string name="about_us_subtitle">My Little App company</string>
    <string name="about_us_moto">More than just code.</string>
    <string name="about_us_description">Creating a bespoke software solution in-house can be risky, expensive and quite often time-consuming. As a leading software dev partner for some technology companies across the globe, we provide the technical, creative and strategic expertise to help you build the solutions you need, in order to enhance your business. Most importantly we charge cheap rates for all stages of software development. Our portfolio speaks for itself. We provide a complete service that will work for you and your client.</string>
    
    <!-- Our Team (currently no strings) -->
    
    <!-- Clients (currently no strings) -->
    
    <!-- Contact -->
    <string name="address">ADDRESS</string>
    <string name="email">EMAIL</string>
    <string name="web">WEB</string>
    <string name="mobile_phone">PHONE</string>
    <string name="office_phone">OFFICE</string>
    <string name="fax_phone">FAX</string>
	<string name="open_map">VIEW ON THE MAP</string>
	<string name="phone_numbers">PHONE NUMBERS</string>
	<string name="call">CALL</string>
	<string name="send">SEND</string>
	<string name="visit">VISIT</string>
	<string name="no_data_available">(no data available)</string>
	<string name="number_not_available">Number not available</string>
	<string name="email_not_available">Email not available</string>
	<string name="website_not_available">Website not available</string>
    
</resources>