<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/about_us_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="40dp"
            android:text="@string/company_name"
            android:textColor="#fff"
            android:textSize="28sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#fff" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/company_image" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#fff" />

        <TextView
            android:id="@+id/about_us_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="24dp"
            android:text="@string/about_us_subtitle"
            android:textColor="#fff"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:background="@drawable/left_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_background_white_30"
                android:orientation="vertical" >

        <TextView
            android:id="@+id/about_us_moto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="14dp"
            android:text="@string/about_us_moto"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/about_us_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="26dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="26dp"
            android:text="@string/about_us_description"
            android:textColor="#fff"
            android:textSize="14sp" />
</LinearLayout>
</LinearLayout>
    </LinearLayout>

</ScrollView>