<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/contact_template_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/contact_template_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:textColor="#fff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/red_button_100" />

    <TextView
        android:id="@+id/contact_template_phone_numbers_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/phone_numbers"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="18dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp" >

        <TextView
            android:id="@+id/contact_template_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/contact_template_tel_call"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_red"
            android:drawableLeft="@drawable/button_call"
            android:drawablePadding="4dp"
            android:paddingRight="8dp"
            android:text="@string/call"
            android:textColor="@color/main_orange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="18dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp" >

        <TextView
            android:id="@+id/contact_template_mob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingTop="2dp"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/contact_template_mob_call"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_red"
            android:drawableLeft="@drawable/button_call"
            android:drawablePadding="4dp"
            android:paddingRight="8dp"
            android:text="@string/call"
            android:textColor="@color/main_orange" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/red_button_100" />

    <TextView
        android:id="@+id/contact_template_fax_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/fax_phone"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="18dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp" >

        <TextView
            android:id="@+id/contact_template_fax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/contact_template_fax_call"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_red"
            android:drawableLeft="@drawable/button_call"
            android:drawablePadding="4dp"
            android:paddingRight="8dp"
            android:text="@string/call"
            android:textColor="@color/main_orange" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/red_button_100" />

    <TextView
        android:id="@+id/contact_template_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/email"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="18dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp" >

        <TextView
            android:id="@+id/contact_template_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/contact_template_email_send"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_red"
            android:drawableLeft="@drawable/button_send"
            android:drawablePadding="4dp"
            android:paddingRight="8dp"
            android:text="@string/send"
            android:textColor="@color/main_orange" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/red_button_100" />

    <TextView
        android:id="@+id/contact_template_web_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/web"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="18dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp" >

        <TextView
            android:id="@+id/contact_template_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/contact_template_web_visit"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_red"
            android:drawableLeft="@drawable/button_visit"
            android:drawablePadding="4dp"
            android:paddingRight="8dp"
            android:text="@string/visit"
            android:textColor="@color/main_orange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="18dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp" >

        <TextView
            android:id="@+id/contact_template_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/contact_template_facebook_visit"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_red"
            android:drawableLeft="@drawable/button_visit"
            android:drawablePadding="4dp"
            android:paddingRight="8dp"
            android:text="@string/visit"
            android:textColor="@color/main_orange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="4dp"
        android:paddingLeft="18dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp" >

        <TextView
            android:id="@+id/contact_template_twiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/contact_template_twiter_visit"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_red"
            android:drawableLeft="@drawable/button_visit"
            android:drawablePadding="4dp"
            android:paddingRight="8dp"
            android:text="@string/visit"
            android:textColor="@color/main_orange" />
    </LinearLayout>

</LinearLayout>